# front_door_intercom_automation

./: .buildinfo  .dockerignore  .env  .gitignore  .pyup.yml  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.html  Makefile  README.html  README.md  SECURITY.html  SECURITY.md  TOTP_password.py  Untitled Diagram.drawio  appveyor.yml  bot.html  camera.html  common.html  config_template.yaml  de_en_crypt_password_with_base32.py  docker-entrypoint.sh  door.html  encrypt_password_with_base64.py  fdia.html  fdia.py  fdia.service  genindex.html  get_otp_token.py  index.html  make.bat  messaging.html  modules.html  objects.inv  otp_token_helper_cli.py  py-modindex.html  (+9 more)
.github/: changelog.yml  dependabot.yml  release.yml
_source/: bot.rst  camera.rst  conf.py  door.rst  index.rst  modules.rst  telegram_bot_setup.md
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  README.md.txt  SECURITY.md.txt  bot.rst.txt  index.rst.txt  modules.rst.txt  web.rst.txt
bot/: __init__.py  receive_msg.py  send_msg.py
camera/: __init__.py  blink_cam.py  cam_common.py  camera.py  picam.py
common/: __init__.py  config_util.py  test_config_util.py
config/: __init__.py  config_util.py  data_class.py  default_cam_enum.py  yaml_read_error.py
doc/: telegram_bot_setup.md
docs/: .buildinfo  BTIcino_Intercom-wiring.html  BTIcino_Intercom-wiring.md  GDPR_Germany_hint_camera_monitoring_-_DSGVO_Fotografische_Ueberwachung.html  GDPR_Germany_hint_camera_monitoring_-_DSGVO_Fotografische_Ueberwachung.md  How_to_install_fresh_RPi_with_code.html  door.html  (+34 more)
(+118 files in other folders)
